Some empty functions

--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,4 +1,4 @@
 <ReturnCode><%= @return_code %></ReturnCode>
-<RememberToken><%= @user.remember_token %></RememberToken>
+<RememberTokenPure><%= @user.remember_token_pure %></RememberTokenPure>
 <Email><%= @user.email %></Email>
 
